gedcom/tests/snapshots/tests__golden_files@invalid_level_error.ged.snap
---
source: gedcom/tests/tests.rs
expression: "format!(\"{:?}\",\n    err.with_source_code(NamedSource::new(filename.to_string_lossy(), data)))"
input_file: gedcom/tests/syntax_inputs/invalid_level_error.ged
---
gedcom::parse_error::invalid_level

  × Invalid non-numeric level 'x'
  ╰─▶ invalid digit found in string
   ╭─[invalid_level_error.ged:1:1]
 1 │ x y z
   · ┬
   · ╰── this is not a (positive) number
   ╰────
